# vertex

./: LICENSE  README.md
ssi_napi_lib/: Cargo.toml  abrir_wallet.sh  criar_wallet.sh  genesis.txn  test_con.sh  teste_cred_def.js  teste_crypto.js  teste_delete_offer.js  teste_delete_range.js  teste_full_cycle.js  teste_healthcheck.js  teste_holder_process.js  teste_holder_request.js  teste_holder_store.js  teste_indicio.js  teste_indicio_attrib.js  teste_indicio_check_attrib.js  teste_indicio_get_cred_def.js  teste_indicio_get_schema.js  teste_indicio_register.js  teste_issuer_issue.js  teste_list_offers.js  teste_list_range.js  teste_offer.js  teste_offer_existing.js  teste_rapido.js  teste_rede.js  teste_schema.js  teste_test_connection.js  teste_test_connection_old.js  teste_von_attrib.js  teste_von_check_attrib.js  teste_von_cred_def.js  teste_von_get_cred_def.js  teste_von_get_schema.js  teste_von_register.js  teste_von_schema.js  teste_wallet_backup.js  teste_wallet_backup2.js  teste_wallet_kdf.js
ssi_napi_lib/src/: ledger.rs  lib.rs  lib2_copy.rs  utils.rs
ssi_napi_lib/src/modules/: common.rs  creddefs.rs  credentials.rs  dids.rs  envelope.rs  messaging.rs  presentations.rs  schemas.rs  wallets.rs
ssi_napi_lib/teste-node/: _helpers.js  config.js  run.js
ssi_napi_lib/teste-node/attrib/: all_tests.sh  test_attrib_01_write.js  test_attrib_02_read.js  test_attrib_03_check.js
ssi_napi_lib/teste-node/creddef/: all_tests.sh  test_creddef_01_ledger_smoke.js  test_creddef_02_ledger_fetch_negative.js  test_creddef_03_idempotent_same_tag.js  (+1 more)
(+976 files in other folders)
